Made support button redirect to the website

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
             <div class="support-button-section">
                 <!-- New third section content goes here -->
-                <button class="button ">Support / Contribute</button>
+                <a href="https://pay.gocardless.com/billing/static/collect-customer-details?id=BRF000W9PTCQE7T34347HYJ2QV6ZM46M&initial=%2Fcollect-customer-details" class="button">Support / Contribute</a>
             </div>
 
             <div class="section">
