--- a/index.html
+++ b/index.html
@@ -1,147 +1,196 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title></title>
-    <meta name="keywords" content="">
-    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
-    <meta name="description" content="">
-    <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900" rel="stylesheet">
-    <link href="default.css" rel="stylesheet" type="text/css" media="all">
-    <link href="fonts.css" rel="stylesheet" type="text/css" media="all">
+    <meta name="keywords" content="" />
+    <meta
+      name="robots"
+      content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1"
+    />
+    <meta name="description" content="" />
+    <link
+      href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900"
+      rel="stylesheet"
+    />
+    <link href="default.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="fonts.css" rel="stylesheet" type="text/css" media="all" />
     <!--[if IE 6]>
-    <link href="default_ie6.css" rel="stylesheet" type="text/css"/><![endif]--></head>
-<body>
-<div id="header-wrapper">
-    <div id="header" class="container">
-
+      <link href="default_ie6.css" rel="stylesheet" type="text/css"
+    /><![endif]-->
+  </head>
+  <body>
+    <div id="header-wrapper">
+      <div id="header" class="container">
         <div class="header-background"></div>
 
         <div id="logo">
-            <a href="index.html">
-                <img src="images/no_background_logo.png" alt="Logo">
-            </a>
+          <a href="index.html">
+            <img src="images/no_background_logo.png" alt="Logo" />
+          </a>
         </div>
 
         <div id="menu">
-            <ul>
-                <li class="current_page_item"><a href="#" accesskey="1" title="">Home</a></li>
-                <li><a href="#" accesskey="2" title="">The centre</a></li>
-                <li><a href="#" accesskey="3" title="">About Us</a></li>
-                <li><a href="#" accesskey="4" title="">Contact</a></li>
-                <li><a href="#" accesskey="5" title="">Supporters</a></li>
-            </ul>
+          <ul>
+            <li class="current_page_item">
+              <a href="#" accesskey="1" title="">Home</a>
+            </li>
+            <li><a href="#" accesskey="2" title="">The centre</a></li>
+            <li><a href="#" accesskey="3" title="">About Us</a></li>
+            <li><a href="#" accesskey="4" title="">Contact</a></li>
+            <li><a href="#" accesskey="5" title="">Supporters</a></li>
+          </ul>
         </div>
-
+      </div>
     </div>
-</div>
-<div id="wrapper1">
-    <div class="wrapper-container">
-
+    <div id="wrapper1">
+      <div class="wrapper-container">
         <div class="column">
-            <div class="section">
-                <h3 class="subtitle">Welcome, friend!</h3>
-                <div class="content">
-                    <p> Become a member of Saith Seren for £10 a month, support us in our aim to promote Welsh language
-                        and culture. </p>
-                    <p> Y Saith Seren <br>
+          <div class="section">
+            <h3 class="subtitle">Welcome, friend!</h3>
+            <div class="content">
+              <p>
+                Become a member of Saith Seren for £10 a month, support us in
+                our aim to promote Welsh language and culture.
+              </p>
+              <p>
+                Y Saith Seren <br />
 
-                        Canolfan Gymraeg Wrecsam <br>
+                Canolfan Gymraeg Wrecsam <br />
 
-                        18 Chester Street <br>
+                18 Chester Street <br />
 
-                        Wrecsam <br>
+                Wrecsam <br />
 
-                        LL13 8BG <br>
+                LL13 8BG <br />
 
-                        01978 447006 <br>
+                01978 447006 <br />
 
-                        Chair (C. Evans) 07885567512 <br>
+                Chair (C. Evans) 07885567512 <br />
 
-                        Facebook - https://www.facebook.com/saithseren1
-                    </p>
-                </div>
+                Facebook - https://www.facebook.com/saithseren1
+              </p>
             </div>
+          </div>
         </div>
 
         <div class="column">
+          <div class="support-button-section">
+            <!-- New third section content goes here -->
+            <a
+              href="https://pay.gocardless.com/billing/static/collect-customer-details?id=BRF000W9PTCQE7T34347HYJ2QV6ZM46M&initial=%2Fcollect-customer-details"
+              class="button"
+              >Support / Contribute</a
+            >
+          </div>
 
-            <div class="support-button-section">
-                <!-- New third section content goes here -->
-                <a href="https://pay.gocardless.com/billing/static/collect-customer-details?id=BRF000W9PTCQE7T34347HYJ2QV6ZM46M&initial=%2Fcollect-customer-details" class="button">Support / Contribute</a>
+          <div class="section">
+            <h3 class="subtitle">Opening hours</h3>
+            <div class="content">
+              <p>
+                Monday - Thursday / 6:30 - 11:00 <br />
+                Friday / 4:30 - 11:00 <br />
+                Saturday / 12:00 - Midnight
+              </p>
             </div>
-
-            <div class="section">
-                <h3 class="subtitle">Opening hours</h3>
-                <div class="content">
-                    <p>
-                        Monday - Thursday / 6:30 - 11:00 <br>
-                        Friday / 4:30 - 11:00 <br>
-                        Saturday / 12:00 - Midnight
-                    </p>
-                </div>
-            </div>
+          </div>
         </div>
-
+      </div>
     </div>
-</div>
-<div id="wrapper2">
-    <div class="wrapper-container">
-
+    <div id="wrapper2">
+      <div class="wrapper-container">
         <div class="column">
-            <div class="section section-wrapper2">
-                <h3 class="subtitle">Upcoming events</h3>
-                <div class="content" id="upcomingEventsContent">
-                    <!-- Data will be loaded here -->
-                </div>
+          <div class="section section-wrapper2">
+            <h3 class="subtitle">Upcoming events</h3>
+            <div class="content" id="upcomingEventsContent">
+              <!-- Data will be loaded here -->
             </div>
+          </div>
         </div>
 
         <div class="column">
-
-            <div class="section section-wrapper2">
-                <h3 class="subtitle">Newsletter signup</h3>
-                <div class="content">
-                    <form method="post" action="#" class="newsletter-signup-form">
-                        <input type="text" class="text" name="firstName" placeholder="First Name">
-                        <input type="text" class="text" name="lastName" placeholder="Last Name">
-                        <input type="email" class="text" name="email" placeholder="Email">
-                        <input type="submit" class="button email-button" value="Sign up">
-                    </form>
+          <div class="section section-wrapper2">
+            <h3 class="subtitle">Newsletter signup</h3>
+            <div class="content">
+              <form method="post" action="#" class="newsletter-signup-form">
+                <input
+                  type="text"
+                  class="text"
+                  id="firstName"
+                  name="firstName"
+                  placeholder="First Name"
+                />
+                <input
+                  type="text"
+                  class="text"
+                  id="lastName"
+                  name="lastName"
+                  placeholder="Last Name"
+                />
+                <input
+                  type="email"
+                  class="text"
+                  id="email"
+                  name="email"
+                  placeholder="Email"
+                />
+                <div class="button-response-container">
+                  <input
+                    type="submit"
+                    class="button email-button"
+                    value="Sign up"
+                  />
+                  <div id="addEventResponse" class="response"></div>
                 </div>
+              </form>
             </div>
+          </div>
         </div>
-
+      </div>
     </div>
-</div>
-<div id="wrapper3">
-    <div id="newsletter" class="container">
+    <div id="wrapper3">
+      <div id="newsletter" class="container">
         <div class="title">
-            <h2>IN CONSTRUCTION 🚧</h2>
+          <h2>IN CONSTRUCTION 🚧</h2>
         </div>
-    </div>
-    <div id="wrapper4">
+      </div>
+      <div id="wrapper4">
         <div id="footer" class="container">
-            <div>
-                <header class="title"><h2>Get in touch</h2>
-                    <span class="byline">Phasellus nec erat sit amet nibh pellentesque congue</span></header>
-                <ul class="contact">
-                    <li><a href="#" class="icon icon-twitter"><span>Twitter</span></a></li>
-                    <li><a href="#" class="icon icon-facebook"><span></span></a></li>
-                    <li><a href="#" class="icon icon-dribbble"><span>Pinterest</span></a></li>
-                    <li><a href="#" class="icon icon-tumblr"><span>Google+</span></a></li>
-                    <li><a href="#" class="icon icon-rss"><span>Pinterest</span></a></li>
-                </ul>
-            </div>
+          <div>
+            <header class="title">
+              <h2>Get in touch</h2>
+              <span class="byline"
+                >Phasellus nec erat sit amet nibh pellentesque congue</span
+              >
+            </header>
+            <ul class="contact">
+              <li>
+                <a href="#" class="icon icon-twitter"><span>Twitter</span></a>
+              </li>
+              <li>
+                <a href="#" class="icon icon-facebook"><span></span></a>
+              </li>
+              <li>
+                <a href="#" class="icon icon-dribbble"
+                  ><span>Pinterest</span></a
+                >
+              </li>
+              <li>
+                <a href="#" class="icon icon-tumblr"><span>Google+</span></a>
+              </li>
+              <li>
+                <a href="#" class="icon icon-rss"><span>Pinterest</span></a>
+              </li>
+            </ul>
+          </div>
         </div>
-    </div>
-    <div id="copyright">
+      </div>
+      <div id="copyright">
         Powered by: <a href="https://templated.co/">TEMPLATED</a>
+      </div>
     </div>
-</div>
 
-<script src="index.js"></script>
-
-</body>
+    <script src="index.js"></script>
+  </body>
 </html>
