made all fields for email subscription required

--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
                                 id="firstName"
                                 name="firstName"
                                 placeholder="First Name"
+                                required
                         />
                         <input
                                 type="text"
@@ -127,6 +128,7 @@
                                 id="lastName"
                                 name="lastName"
                                 placeholder="Last Name"
+                                required
                         />
                         <input
                                 type="email"
@@ -134,6 +136,7 @@
                                 id="email"
                                 name="email"
                                 placeholder="Email"
+                                required
                         />
                         <div class="button-response-container">
                             <input
