added proper hover effect for menu buttons + created contact.html

--- a/contact.html
+++ b/contact.html
@@ -30,12 +30,12 @@
 
         <div id="menu">
             <ul>
-                <li class="current_page_item">
+                <li>
                     <a href="index.html" accesskey="1" title="">Home</a>
                 </li>
                 <li><a href="#" accesskey="2" title="">The centre</a></li>
                 <li><a href="#" accesskey="3" title="">About Us</a></li>
-                <li><a href="contact.html" accesskey="4" title="">Contact</a></li>
+                <li class="current_page_item"><a href="#" accesskey="4" title="">Contact</a></li>
                 <li><a href="#" accesskey="5" title="">Supporters</a></li>
             </ul>
         </div>
