--- a/contact.html
+++ b/contact.html
@@ -44,13 +44,22 @@
 <div id="wrapper1">
     <div class="wrapper-container">
         <div class="column">
+            <div class="section map-section">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2398.515727084381!2d-2.9944593237639943!3d53.04704029707674!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487ac71d2fc0a0cb%3A0x3fc094f30db4bbaa!2sSaith%20Seren!5e0!3m2!1suk!2suk!4v1704758345830!5m2!1suk!2suk"
+                        width="600"
+                        height="450"
+                        style="border:0;"
+                        allowfullscreen=""
+                        loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade">
+                </iframe>
+            </div>
+        </div>
+
+        <div class="column">
             <div class="section">
-                <h3 class="subtitle">Welcome, friend!</h3>
+                <h3 class="subtitle">Contact</h3>
                 <div class="content">
-                    <p>
-                        Become a member of Saith Seren for £10 a month, support us in
-                        our aim to promote Welsh language and culture.
-                    </p>
                     <p>
                         Y Saith Seren <br/>
 
@@ -71,131 +80,9 @@
                 </div>
             </div>
         </div>
-
-        <div class="column">
-            <div class="support-button-section">
-                <!-- New third section content goes here -->
-                <a
-                        href="https://pay.gocardless.com/billing/static/collect-customer-details?id=BRF000W9PTCQE7T34347HYJ2QV6ZM46M&initial=%2Fcollect-customer-details"
-                        class="button"
-                >Support / Contribute</a
-                >
-            </div>
-
-            <div class="section">
-                <h3 class="subtitle">Opening hours</h3>
-                <div class="content">
-                    <p>
-                        Monday - Thursday / 6:30 - 11:00 <br/>
-                        Friday / 4:30 - 11:00 <br/>
-                        Saturday / 12:00 - Midnight
-                    </p>
-                </div>
-            </div>
-        </div>
     </div>
 </div>
-<div id="wrapper2">
-    <div class="wrapper-container">
-        <div class="column">
-            <div class="section section-wrapper2">
-                <h3 class="subtitle">Upcoming events</h3>
-                <div class="content" id="upcomingEventsContent">
-                    <!-- Data will be loaded here -->
-                </div>
-            </div>
-        </div>
 
-        <div class="column">
-            <div class="section section-wrapper2">
-                <h3 class="subtitle">Newsletter signup</h3>
-                <div class="content">
-                    <form method="post" action="#" class="newsletter-signup-form">
-                        <input
-                                type="text"
-                                class="text"
-                                id="firstName"
-                                name="firstName"
-                                placeholder="First Name"
-                                required
-                        />
-                        <input
-                                type="text"
-                                class="text"
-                                id="lastName"
-                                name="lastName"
-                                placeholder="Last Name"
-                                required
-                        />
-                        <input
-                                type="email"
-                                class="text"
-                                id="email"
-                                name="email"
-                                placeholder="Email"
-                                required
-                        />
-                        <div class="button-response-container">
-                            <input
-                                    type="submit"
-                                    class="button email-button"
-                                    value="Sign up"
-                            />
-                            <div id="addEventResponse" class="response"></div>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<div id="wrapper3">
-    <!-- Slideshow container -->
-    <div class="slideshow-container">
-        <div class="aspect-ratio-wrapper">
-
-            <!-- Full-width images with number and caption text -->
-            <div class="mySlides fade">
-                <img src="images/carousel/Saith Seren.jpg" style="width:100%">
-            </div>
-
-            <div class="mySlides fade">
-                <img src="images/carousel/anniversary.jpg" style="width:100%">
-            </div>
-
-            <div class="mySlides fade">
-                <img src="images/carousel/darts.jpg" style="width:100%">
-            </div>
-
-            <div class="mySlides fade">
-                <img src="images/carousel/band.jpg" style="width:100%">
-            </div>
-
-            <div class="mySlides fade">
-                <img src="images/carousel/kids1.jpeg" style="width:100%">
-            </div>
-
-            <div class="mySlides fade">
-                <img src="images/carousel/aviation.jpg" style="width:100%">
-            </div>
-
-            <!-- Next and previous buttons -->
-            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-            <a class="next" onclick="plusSlides(1)">&#10095;</a>
-        </div>
-    </div>
-    <br>
-
-    <!-- The dots/circles -->
-    <div style="text-align:center">
-        <span class="dot" onclick="currentSlide(1)"></span>
-        <span class="dot" onclick="currentSlide(2)"></span>
-        <span class="dot" onclick="currentSlide(3)"></span>
-        <span class="dot" onclick="currentSlide(4)"></span>
-        <span class="dot" onclick="currentSlide(5)"></span>
-        <span class="dot" onclick="currentSlide(6)"></span>
-    </div>
-</div>
 <div id="wrapper4">
     <div class="wrapper-container footer">
         <div class="column">
@@ -237,6 +124,6 @@
     </div>
 </div>
 
-<script src="index.js" type="text/javascript"></script>
+<!--<script src="index.js" type="text/javascript"></script>-->
 </body>
 </html>
