the-centre.html page is ready + modified the first section of index.html

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <li class="current_page_item">
                     <a href="index.html" accesskey="1" title="">Home</a>
                 </li>
-                <li><a href="#" accesskey="2" title="">The centre</a></li>
+                <li><a href="the-centre.html" accesskey="2" title="">The centre</a></li>
                 <li><a href="#" accesskey="3" title="">About Us</a></li>
                 <li><a href="contact.html" accesskey="4" title="">Contact</a></li>
                 <li><a href="#" accesskey="5" title="">Supporters</a></li>
@@ -48,8 +48,7 @@
                 <h3 class="subtitle">Welcome, friend!</h3>
                 <div class="content">
                     <p>
-                        Become a member of Saith Seren for £10 a month, support us in
-                        our aim to promote Welsh language and culture.
+                        Saith Seren's aim is to provide a venue for Welsh speakers, learners and  supporters of the language and culture to mingle and socialise.  There are many events including Welsh and English entertainment, Welsh lessons or simply an opportunity to spend some leisurely time with friends.
                     </p>
                     <p>
                         Y Saith Seren <br/>
@@ -73,6 +72,16 @@
         </div>
 
         <div class="column">
+
+            <div class="section">
+                <h3 class="subtitle">Support Seith Seren</h3>
+                <div class="content">
+                    <p>
+                        Become a member of Saith Seren for £10 a month, support us in our aim to promote Welsh language and culture.
+                    </p>
+                </div>
+            </div>
+
             <div class="support-button-section">
                 <!-- New third section content goes here -->
                 <a
