--- a/the-centre.html
+++ b/the-centre.html
@@ -33,9 +33,9 @@
                 <li>
                     <a href="index.html" accesskey="1" title="">Home</a>
                 </li>
-                <li><a href="the-centre.html" accesskey="2" title="">The centre</a></li>
+                <li class="current_page_item"><a href="the-centre.html" accesskey="2" title="">The centre</a></li>
                 <li><a href="#" accesskey="3" title="">About Us</a></li>
-                <li class="current_page_item"><a href="#" accesskey="4" title="">Contact</a></li>
+                <li><a href="contact.html" accesskey="4" title="">Contact</a></li>
                 <li><a href="#" accesskey="5" title="">Supporters</a></li>
             </ul>
         </div>
@@ -44,22 +44,14 @@
 <div id="wrapper1">
     <div class="wrapper-container">
         <div class="column">
-            <div class="section map-section">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2398.515727084381!2d-2.9944593237639943!3d53.04704029707674!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487ac71d2fc0a0cb%3A0x3fc094f30db4bbaa!2sSaith%20Seren!5e0!3m2!1suk!2suk!4v1704758345830!5m2!1suk!2suk"
-                        width="600"
-                        height="450"
-                        style="border:0;"
-                        allowfullscreen=""
-                        loading="lazy"
-                        referrerpolicy="no-referrer-when-downgrade">
-                </iframe>
-            </div>
-        </div>
-
-        <div class="column">
             <div class="section">
-                <h3 class="subtitle">Contact</h3>
+                <h3 class="subtitle">Y Saith Seren’ - Welsh Centre</h3>
                 <div class="content">
+                    <p>
+                        The intention is to provide a focus for Welsh speakers, learners and supporters of the language
+                        and culture. There are many events including Welsh and English entertainment, Welsh lessons or a
+                        leisurely time with friends.
+                    </p>
                     <p>
                         Y Saith Seren <br/>
 
@@ -80,9 +72,82 @@
                 </div>
             </div>
         </div>
+
+        <div class="column">
+
+            <div class="section">
+                <h3 class="subtitle">Support Seith Seren</h3>
+                <div class="content">
+                    <p>
+                        Become a member of Saith Seren for £10 a month, support us in our aim to promote Welsh language
+                        and culture.
+                    </p>
+                </div>
+            </div>
+
+            <div class="support-button-section">
+                <!-- New third section content goes here -->
+                <a
+                        href="https://pay.gocardless.com/billing/static/collect-customer-details?id=BRF000W9PTCQE7T34347HYJ2QV6ZM46M&initial=%2Fcollect-customer-details"
+                        class="button"
+                >Support / Contribute</a
+                >
+            </div>
+
+            <div class="section">
+                <h3 class="subtitle">Opening times</h3>
+                <div class="content">
+                    <p>
+                        Monday / Thursday 4:30 - 11:00 <br/>
+                        Friday / Saturday- 11:30 am - 1:00 am
+                    </p>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
+<div id="wrapper2">
+    <div class="wrapper-container">
 
+        <div class="column">
+            <div class="section section-wrapper2">
+                <h3 class="subtitle">Rooms available for rent</h3>
+                <div class="content">
+                    <p>
+                        We have 5 rooms available for rent from 1 hour or longer periods; <br/>
+
+                        Charities £5 per hour / Business Use £10 per hour <br/>
+
+                        Full details - 01978 447006 / 7seren@gmail.com
+                    </p>
+                </div>
+            </div>
+        </div>
+
+    </div>
+</div>
+<div id="wrapper3">
+    <div class="wrapper-container">
+        <div class="column">
+            <img src="images/brewers.jpg" alt="Brewers" class="centre-image">
+
+            <div class="section" style="margin-top: 20px">
+                <p>
+                    Two of our local brewers - Doug and Dave - at Saith Seren, Wrecsam to celebrate the new range of
+                    real ales on offer behind the bar.
+                </p>
+            </div>
+        </div>
+        <div class="column">
+            <div class="section" style="margin-bottom: 20px">
+                <p>
+                    An astonishing performance dedicated to the tenth anniversary of Seith Seren. Be sure to check out our calendar, so you don't miss future events like this.
+                </p>
+            </div>
+            <img src="images/10performance.jpg" alt="Brewers" class="centre-image">
+        </div>
+    </div>
+</div>
 <div id="wrapper4">
     <div class="wrapper-container footer">
         <div class="column">
@@ -124,6 +189,6 @@
     </div>
 </div>
 
-<!--<script src="index.js" type="text/javascript"></script>-->
+<script src="index.js" type="text/javascript"></script>
 </body>
 </html>
