supporters.html page is ready

--- a/supporters.html
+++ b/supporters.html
@@ -35,8 +35,8 @@
                 </li>
                 <li><a href="the-centre.html" accesskey="2" title="">The centre</a></li>
                 <li><a href="#" accesskey="3" title="">About Us</a></li>
-                <li class="current_page_item"><a href="contact.html" accesskey="4" title="">Contact</a></li>
-                <li><a href="supporters.html" accesskey="5" title="">Supporters</a></li>
+                <li><a href="contact.html" accesskey="4" title="">Contact</a></li>
+                <li class="current_page_item"><a href="supporters.html" accesskey="5" title="">Supporters</a></li>
             </ul>
         </div>
     </div>
@@ -44,42 +44,32 @@
 <div id="wrapper1">
     <div class="wrapper-container">
         <div class="column">
-            <div class="section map-section">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2398.515727084381!2d-2.9944593237639943!3d53.04704029707674!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487ac71d2fc0a0cb%3A0x3fc094f30db4bbaa!2sSaith%20Seren!5e0!3m2!1suk!2suk!4v1704758345830!5m2!1suk!2suk"
-                        width="600"
-                        height="450"
-                        style="border:0;"
-                        allowfullscreen=""
-                        loading="lazy"
-                        referrerpolicy="no-referrer-when-downgrade">
-                </iframe>
-            </div>
-        </div>
-
-        <div class="column">
             <div class="section">
-                <h3 class="subtitle">Contact</h3>
+                <h3 class="subtitle">These are the businesses that helped keep Saith Seren open. Please support them!</h3>
                 <div class="content">
                     <p>
-                        Y Saith Seren <br/>
+                        <a href="https://www.reesjeweller.co.uk/" target="_blank" class="section-link">Martin Rees Jewellers</a> <br/>
 
-                        Canolfan Gymraeg Wrecsam <br/>
+                        <a href="https://www.meadowvalefoods.co.uk/" target="_blank" class="section-link">Meadowvale Foods</a> <br/>
 
-                        18 Chester Street <br/>
+                        <a href="https://lloydsanimalfeeds.co.uk/" target="_blank" class="section-link">Lloyds Animal Feeds</a> <br/>
 
-                        Wrecsam <br/>
+                        <a href="https://www.bestofwales.co.uk/" target="_blank" class="section-link">BestofWales.co.uk</a> <br/>
 
-                        LL13 8BG <br/>
+                        <a href="https://www.avow.org/" target="_blank" class="section-link">AVOW</a> <br/>
 
-                        01978 447006 <br/>
+                        <a href="https://www.wrexham.gov.uk/" target="_blank" class="section-link">Wrexham Borough Council</a> <br/>
 
-                        Chair (C. Evans) 07885567512 <br/>
+                        <a href="http://www.wrexhamsavers.co.uk/" target="_blank" class="section-link">Wrexham Savers</a> <br/>
 
-                        Facebook - <a href="https://www.facebook.com/saithseren1" target="_blank" class="section-link">https://www.facebook.com/saithseren1</a>
+                        <a href="https://www.saysomethingin.com/en/home/" target="_blank" class="section-link">SaySomethinginWelsh.com</a> <br/>
+
+                        <a href=https://www.hsbc.co.uk/" target="_blank" class="section-link">HSBC</a> <br/>
                     </p>
                 </div>
             </div>
         </div>
+
     </div>
 </div>
 
@@ -124,6 +114,6 @@
     </div>
 </div>
 
-<!--<script src="index.js" type="text/javascript"></script>-->
+<script src="index.js" type="text/javascript"></script>
 </body>
 </html>
