--- a/the-centre.html
+++ b/the-centre.html
@@ -36,7 +36,7 @@
                 <li class="current_page_item"><a href="the-centre.html" accesskey="2" title="">The centre</a></li>
                 <li><a href="#" accesskey="3" title="">About Us</a></li>
                 <li><a href="contact.html" accesskey="4" title="">Contact</a></li>
-                <li><a href="#" accesskey="5" title="">Supporters</a></li>
+                <li><a href="supporters.html" accesskey="5" title="">Supporters</a></li>
             </ul>
         </div>
     </div>
