added margin to the bottom of title in email section

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
         <div class="column">
             <div class="section section-wrapper2">
-                <h3 class="subtitle">Newsletter signup</h3>
+                <h3 class="subtitle" style="margin-bottom: 25px">Newsletter signup</h3>
                 <div class="content">
                     <form method="post" action="#" class="newsletter-signup-form">
                         <input
