about-us.html is ready

--- a/about-us.html
+++ b/about-us.html
@@ -34,9 +34,9 @@
                     <a href="index.html" accesskey="1" title="">Home</a>
                 </li>
                 <li><a href="the-centre.html" accesskey="2" title="">The centre</a></li>
-                <li><a href="about-us.html" accesskey="3" title="">About Us</a></li>
+                <li class="current_page_item"><a href="about-us.html" accesskey="3" title="">About Us</a></li>
                 <li><a href="contact.html" accesskey="4" title="">Contact</a></li>
-                <li class="current_page_item"><a href="supporters.html" accesskey="5" title="">Supporters</a></li>
+                <li><a href="supporters.html" accesskey="5" title="">Supporters</a></li>
             </ul>
         </div>
     </div>
@@ -45,26 +45,21 @@
     <div class="wrapper-container">
         <div class="column">
             <div class="section">
-                <h3 class="subtitle">These are the businesses that helped keep Saith Seren open. Please support them!</h3>
                 <div class="content">
                     <p>
-                        <a href="https://www.reesjeweller.co.uk/" target="_blank" class="section-link">Martin Rees Jewellers</a> <br/>
-
-                        <a href="https://www.meadowvalefoods.co.uk/" target="_blank" class="section-link">Meadowvale Foods</a> <br/>
-
-                        <a href="https://lloydsanimalfeeds.co.uk/" target="_blank" class="section-link">Lloyds Animal Feeds</a> <br/>
-
-                        <a href="https://www.bestofwales.co.uk/" target="_blank" class="section-link">BestofWales.co.uk</a> <br/>
-
-                        <a href="https://www.avow.org/" target="_blank" class="section-link">AVOW</a> <br/>
-
-                        <a href="https://www.wrexham.gov.uk/" target="_blank" class="section-link">Wrexham Borough Council</a> <br/>
-
-                        <a href="http://www.wrexhamsavers.co.uk/" target="_blank" class="section-link">Wrexham Savers</a> <br/>
-
-                        <a href="https://www.saysomethingin.com/en/home/" target="_blank" class="section-link">SaySomethinginWelsh.com</a> <br/>
-
-                        <a href=https://www.hsbc.co.uk/" target="_blank" class="section-link">HSBC</a> <br/>
+                        <b>Saith Seren</b> is a local cooperative in Wrexham town centre. The Welsh centre was established 10 years, unfortunately in 2015 the centre was at risk of closure. Due to the generosity of businesses and people across the globe the centre was saved from closure, people across the globe still help to keep the centre going. The centre will be growing and developing further in the future.
+                    </p>
+                </div>
+                <h3 class="subtitle">The story of the establishment of Saith Seren</h3>
+                <div class="content">
+                    <p>
+                        Saith Seren, Wrexham's Welsh Centre, opened in 2012, following the National Eisteddfod's visit to Wrexham in Summer 2011. The 'Seven Stars' pub had been vacant for 18 months, and local Councillor Marc Jones came up with the idea of re-open it as a Welsh Centre in order to build on the increased interest and pride in the language as a result of the Eisteddfod. He set up a Community Co-operative Company with a Management Board and shareholders. He persuaded Clwyd Alyn Housing Association to buy and renovate the listed building, which was then rented by the co-operative. 'Saith Seren' opened at the end of January 2012.
+                    </p>
+                </div>
+                <h3 class="subtitle">The purpose of the Centre</h3>
+                <div class="content">
+                    <p>
+                        'Saith' is a centre for anyone who is proud to be, or interested in Welsh, to socialize and celebrate our culture. It provides a venue for Welsh language activities such as gigs, and sporting events on television with Welsh commentary on S4C. Clwb Clebran, every Thursday evening, gives Welsh language learners the opportunity to practice in an informal atmosphere outside the classroom. There are also many non-Welsh language activities e.g. darts, live bands on a Saturday night, but even on those nights, the Welsh spirit and culture is evident.
                     </p>
                 </div>
             </div>
