--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
                     <a href="index.html" accesskey="1" title="">Home</a>
                 </li>
                 <li><a href="the-centre.html" accesskey="2" title="">The centre</a></li>
-                <li><a href="#" accesskey="3" title="">About Us</a></li>
+                <li><a href="about-us.html" accesskey="3" title="">About Us</a></li>
                 <li class="current_page_item"><a href="contact.html" accesskey="4" title="">Contact</a></li>
                 <li><a href="supporters.html" accesskey="5" title="">Supporters</a></li>
             </ul>
