--- a/about-us.html
+++ b/about-us.html
@@ -1,14 +1,9 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <title></title>
-    <meta name="keywords" content=""/>
-    <meta
-            name="robots"
-            content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1"
-    />
+    <title>About Us</title>
     <meta name="description" content=""/>
     <link
             href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900"
