--- a/about-us.html
+++ b/about-us.html
@@ -103,6 +103,6 @@
     </div>
 </div>
 
-<script src="index.js" type="text/javascript"></script>
+<!--<script src="index.js" type="text/javascript"></script>-->
 </body>
 </html>
