--- a/supporters.html
+++ b/supporters.html
@@ -108,6 +108,6 @@
     </div>
 </div>
 
-<script src="index.js" type="text/javascript"></script>
+<!--<script src="index.js" type="text/javascript"></script>-->
 </body>
 </html>
