--- a/the-centre.html
+++ b/the-centre.html
@@ -183,6 +183,6 @@
     </div>
 </div>
 
-<script src="index.js" type="text/javascript"></script>
+<!--<script src="index.js" type="text/javascript"></script>-->
 </body>
 </html>
