--- a/supporters.html
+++ b/supporters.html
@@ -4,6 +4,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <title>Supporters</title>
+    <link rel="icon" href="images/icons/website-icon.png" type="image/x-icon">
     <meta name="description" content=""/>
     <link
             href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900"
