--- a/the-centre.html
+++ b/the-centre.html
@@ -84,7 +84,7 @@
                 <!-- New third section content goes here -->
                 <a
                         href="https://pay.gocardless.com/billing/static/collect-customer-details?id=BRF000W9PTCQE7T34347HYJ2QV6ZM46M&initial=%2Fcollect-customer-details"
-                        class="button"
+                        class="button button-link"
                 >Support / Contribute</a
                 >
             </div>
